--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -284,6 +284,21 @@
                                           Tag="126"
                                           Click="BtnYmyouliCol_Click"
                                           GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol127"
+                                          x:Uid="BtnYmyouliCol127"
+                                          Tag="127"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol128"
+                                          x:Uid="BtnYmyouliCol128"
+                                          Tag="128"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol134"
+                                          x:Uid="BtnYmyouliCol134"
+                                          Tag="134"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
                 <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol182"
                                           x:Uid="BtnYmyouliCol182"
                                           Tag="182"
@@ -294,11 +309,6 @@
                                           Tag="183"
                                           Click="BtnYmyouliCol_Click"
                                           GroupName="YmyouliCol" />
-                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol215"
-                                          x:Uid="BtnYmyouliCol215"
-                                          Tag="215"
-                                          Click="BtnYmyouliCol_Click"
-                                          GroupName="YmyouliCol" />
                 <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol184"
                                           x:Uid="BtnYmyouliCol184"
                                           Tag="184"
@@ -307,6 +317,81 @@
                 <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol185"
                                           x:Uid="BtnYmyouliCol185"
                                           Tag="185"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol186"
+                                          x:Uid="BtnYmyouliCol186"
+                                          Tag="186"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol187"
+                                          x:Uid="BtnYmyouliCol187"
+                                          Tag="187"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol214"
+                                          x:Uid="BtnYmyouliCol214"
+                                          Tag="214"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol215"
+                                          x:Uid="BtnYmyouliCol215"
+                                          Tag="215"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol224"
+                                          x:Uid="BtnYmyouliCol224"
+                                          Tag="224"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol225"
+                                          x:Uid="BtnYmyouliCol225"
+                                          Tag="225"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol226"
+                                          x:Uid="BtnYmyouliCol226"
+                                          Tag="226"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol227"
+                                          x:Uid="BtnYmyouliCol227"
+                                          Tag="227"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol228"
+                                          x:Uid="BtnYmyouliCol228"
+                                          Tag="228"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol229"
+                                          x:Uid="BtnYmyouliCol229"
+                                          Tag="229"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol230"
+                                          x:Uid="BtnYmyouliCol230"
+                                          Tag="230"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol231"
+                                          x:Uid="BtnYmyouliCol231"
+                                          Tag="231"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol232"
+                                          x:Uid="BtnYmyouliCol232"
+                                          Tag="232"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol233"
+                                          x:Uid="BtnYmyouliCol233"
+                                          Tag="233"
+                                          Click="BtnYmyouliCol_Click"
+                                          GroupName="YmyouliCol" />
+                <muxc:RadioMenuFlyoutItem Name="BtnYmyouliCol241"
+                                          x:Uid="BtnYmyouliCol241"
+                                          Tag="241"
                                           Click="BtnYmyouliCol_Click"
                                           GroupName="YmyouliCol" />
             </MenuFlyoutSubItem>
@@ -341,7 +426,8 @@
                 </MenuFlyoutItem.KeyboardAccelerators>
             </MenuFlyoutItem>
             <MenuFlyoutSeparator />
-            <MenuFlyoutItem x:Uid="BtnAbout"
+            <MenuFlyoutItem Name="BtnAbout"
+                            x:Uid="BtnAbout"
                             IsEnabled="False" />
             <MenuFlyoutItem x:Uid="BtnContact"
                             IsEnabled="False" />
