--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -95,13 +95,17 @@
                                           Click="BtnPush_Click"
                                           Tag=""
                                           GroupName="Push" />
+                <muxc:RadioMenuFlyoutItem Name="BtnPushCur"
+                                          Click="BtnPush_Click"
+                                          Visibility="Collapsed"
+                                          IsEnabled="False"
+                                          Tag=""
+                                          GroupName="Push" />
                 <muxc:RadioMenuFlyoutItem Name="BtnPushDesktop"
-                                          x:Uid="BtnPushDesktop"
                                           Click="BtnPush_Click"
                                           Tag="desktop"
                                           GroupName="Push" />
                 <muxc:RadioMenuFlyoutItem Name="BtnPushLock"
-                                          x:Uid="BtnPushLock"
                                           Click="BtnPush_Click"
                                           Tag="lock"
                                           GroupName="Push" />
